tdf#100413 Use same default values for preview string and format list

Add specific default values for:
- scientific: to distinguish engineering notation
- fraction: to have quarter format understandable

Change-Id: I73b74713a4bc502e9967b8d2c9983cfc6244912e